--- a/src/styles/hospitalRegPage.css
+++ b/src/styles/hospitalRegPage.css
@@ -1,3 +1,9 @@
+body {
+	font-family: Arial, sans-serif;
+	background-color: #e6f2ff;
+	margin: 0;
+	padding: 20px;
+}
 .container {
 	max-width: 1000px;
 	margin: 0 auto;
@@ -75,7 +81,6 @@ select {
 }
 .dropdown-check-list ul.items {
 	padding: 2px;
-	display: none;
 	margin: 0;
 	border: 1px solid #ddd;
 	border-top: none;
