--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -15,14 +15,15 @@ nav {
 	align-items: center;
 	padding: 10px 0;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	font-size: 20px;
 }
 .logo {
 	display: flex;
 	align-items: center;
 }
 .logo img {
-	width: 50px;
-	height: 50px;
+	width: 80px;
+	height: 80px;
 }
 .nav-links {
 	display: flex;
