--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -13,7 +13,7 @@ nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 10px 0;
+	padding: 10px 40px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	font-size: 20px;
 }
@@ -27,6 +27,7 @@ nav {
 }
 .nav-links {
 	display: flex;
+	gap: 50px;
 }
 .nav-links a {
 	margin-left: 20px;
