--- a/src/styles/hospitalDashboard.css
+++ b/src/styles/hospitalDashboard.css
@@ -3,7 +3,7 @@ body {
 	line-height: 1.6;
 	margin: 0;
 	padding: 20px;
-	background-color: #f0f0f0;
+	background-color: #dbf4ff;
 }
 
 .container {
@@ -23,7 +23,7 @@ h1 {
 }
 
 .card {
-	background-color: #fff;
+	background-color: #a9d9ee;
 	border-radius: 8px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	padding: 20px;
@@ -37,8 +37,8 @@ h1 {
 }
 
 .badge {
-	background-color: #e0e0e0;
-	color: #333;
+	background-color: #141414e6;
+	color: #fff;
 	padding: 5px 10px;
 	border-radius: 20px;
 	font-size: 0.8em;
