--- a/src/styles/hospitalDashboard.css
+++ b/src/styles/hospitalDashboard.css
@@ -23,10 +23,26 @@ h1 {
 }
 
 .card {
-	background-color: #a9d9ee;
+	background-color: #84c4e0;
 	border-radius: 8px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	padding: 20px;
+}
+.card3{
+		background-color: #fff;
+		border-radius: 8px;
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+		padding: 20px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center; /* Vertically centers the content */
+		align-items: center; /* Horizontally centers the content */
+		 /* Ensure the card takes full height of its container */
+		text-align: center;
+}
+
+.card3 h2{
+	margin: 0
 }
 
 .card h2 {
