changes in css in reg page

--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -67,7 +67,7 @@ p {
 	font-size: 1em;
 }
 .btn-hospital {
-	background-color: #5f9ea0;
+	background-color: #448e94;
 	color: white;
 }
 .btn-user {
