--- a/src/styles/userForgetPass.css
+++ b/src/styles/userForgetPass.css
@@ -8,13 +8,15 @@ body {
 	align-items: center;
 	height: 100vh;
 	margin: 0;
+	background-color: #dbf4ff;
 }
 .logo {
 	position: absolute;
 	top: 20px;
 	left: 20px;
-	width: 50px;
-	height: 50px;
+	width: 80px;
+	height: 80px;
+	padding-left: 40px;
 }
 .container {
 	background-color: rgba(255, 255, 255, 0.9);
@@ -52,7 +54,7 @@ label {
 button {
 	width: 100%;
 	padding: 10px;
-	background-color: #5cb3a7;
+	background-color: #448e94;
 	color: white;
 	border: none;
 	border-radius: 15px;
