Refactor navigation links in NabBar.css and NabBar.js, and update CSS in reg page and HomePage.js

--- a/src/components/nabBar/NabBar.css
+++ b/src/components/nabBar/NabBar.css
@@ -7,13 +7,14 @@ nav {
 	font-size: 20px;
 	position: sticky;
 	top: 0;
+	background: #a9d9ee;
 }
-.logo {
+.nav-logo {
 	display: flex;
 
 	align-items: center;
 }
-.logo img {
+.nav-logo img {
 	width: 80px;
 	height: 80px;
 }
