--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -1,42 +1,37 @@
-body {
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 0;
-	background-color: #b3e0ff;
-}
 #homePage {
+	font-family: Arial, sans-serif;
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 20px;
 }
-.emergency-call {
+#homePage .emergency-call {
 	color: rgb(255, 86, 87, 255);
 	font-weight: bold;
 }
 
-.main-content {
+#homePage .main-content {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	margin-top: 50px;
 }
-.text-content {
+#homePage .text-content {
 	max-width: 50%;
 }
-h1 {
+#homePage h1 {
 	font-size: 2.5em;
 	margin-bottom: 10px;
 }
-p {
+#homePage p {
 	font-size: 1.1em;
 	margin-bottom: 20px;
 }
-.buttons {
+#homePage .buttons {
 	display: flex;
 	gap: 20px;
 }
 
-.btn {
+#homePage .btn {
 	padding: 12px;
 	width: 150px;
 	border: none;
@@ -48,18 +43,18 @@ p {
 	justify-content: space-around;
 	text-decoration: unset;
 }
-.btn-hospital {
+#homePage .btn-hospital {
 	background-color: #448e94;
 	color: white;
 }
-.btn-user {
+#homePage .btn-user {
 	background-color: #f0f8ff;
 	color: #333;
 }
-.image-content {
+#homePage .image-content {
 	max-width: 50%;
 }
-.image-content img {
+#homePage .image-content img {
 	z-index: 100;
 	width: 50%;
 	height: auto;
@@ -67,6 +62,6 @@ p {
 	right: 0;
 	position: fixed;
 }
-#typing-text {
+#homePage #typing-text {
 	min-height: 1.2em;
 }
