--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@ body {
 		'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: #e6f2ff;
+	background-color: #b3e0ff;
 }
 
 code {
