--- a/src/styles/userEmergencyForm.css
+++ b/src/styles/userEmergencyForm.css
@@ -1,6 +1,8 @@
 #userEmergencyForm {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 	padding: 20px;
-	border-radius: 10px;
 }
 
 #userEmergencyForm .header {
@@ -83,7 +85,7 @@
 }
 
 #userEmergencyForm .image-upload {
-	flex: 1;
+	width: 50%;
 	display: flex;
 	flex-direction: column;
 }
@@ -101,8 +103,13 @@
 	align-items: center;
 	cursor: pointer;
 	background-color: white;
-	height: 200px;
+	height: 300px;
 	width: 80%;
+}
+
+#userEmergencyForm .image-area input {
+	background-color: white;
+	position: absolute;
 }
 
 #userEmergencyForm .camera-icon {
