--- a/src/styles/userEmergencyForm.css
+++ b/src/styles/userEmergencyForm.css
@@ -140,6 +140,61 @@
 	background-color: #1f5c5c;
 }
 
+#userEmergencyForm .modal {
+	position: fixed;
+
+	z-index: 1;
+
+	left: 0;
+
+	top: 0;
+
+	width: 100%;
+
+	height: 100%;
+
+	overflow: auto;
+
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+#userEmergencyForm .modal-content {
+	background-color: #fefefe;
+
+	margin: 15% auto;
+
+	padding: 20px;
+
+	border: 1px solid #888;
+
+	width: 80%;
+
+	max-width: 500px;
+
+	border-radius: 5px;
+}
+
+#userEmergencyForm .close {
+	color: #aaa;
+
+	float: right;
+
+	font-size: 28px;
+
+	font-weight: bold;
+
+	cursor: pointer;
+}
+
+#userEmergencyForm .close:hover,
+#userEmergencyForm .close:focus {
+	color: black;
+
+	text-decoration: none;
+
+	cursor: pointer;
+}
+
 @media (max-width: 768px) {
 	.form-content {
 		flex-direction: column;
